#
# some news ... see also TODO for hints
#


2017-09-13 -> add some functions to handle mouse related topics
	   -> finalize follow_mouse example
	   -> add some more documentation
	   -> add some functions in different areas
	   -> add skeleton and first steps of flying_astronaut "ball" demo
	   -> go back to int for vector2d_t and update examples

2017-09-12 -> add keyboard handling in input_control
	   -> add some more documenation and links around SDL

2017-09-11 -> add fullscreen kdo arg to hello_sdl
	   -> fix wrong usage of accel and velo in input_control example
	   -> add init_game_object_simple() wich uses SDL_QueryTexture to get
	      the size of the texture
	   -> add skeleton for follow_mouse click example
	   -> add some more event "handler" in input_control

2017-09-10 -> fix joystick -> let both (i have only two) control the astronaut

2017-09-09 -> add control of the astronaut via joystick

2017-09-08 -> fix joystick initialisation

2017-09-07 -> set correct size of screen and image for input_control example
	      (the first example which should run on the tv)
	   -> add first input parts for the joystick

2017-09-06 -> change pos_t of game_obj_t from int to float
	   -> add velocity and acceleration to game_obj_t
	   -> add some common operations on vector_2d_t
	   -> add some functions to set pos of game_obj_t
	   -> add skeleton input_control (joystick/mouse/keyboard control of an object)

2017-09-05 -> remove lib_example (use_game_obj_t is a better example)
	   -> mark draw_texture and draw_frame_texture internal
	   -> add draw_object as a replacement
	   -> init game_obj_t.frame with -1 (means no sprite_sheet)
	   -> add init_game_object_from_file function which does load_texture()
	      and init_game_object in one step
	   -> some rework of th draw_*_texture functions (make them aware of game_obj_t)
	   -> add function set_object_frame which updates game_obj_t.frame content

2017-09-04 -> add AUTHORS, TODO and NEWS file